14-argocd-rollouts/blue-green-analysis/rollout-with-analysis.yml

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: blue-green-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: blue-green-deployment
  template:
    metadata:
      labels:
        app: blue-green-deployment
    spec:
      containers:
      - name: blue-green
        image: micutzu/blue-green
        ports:
        - containerPort: 5000
  strategy:
    blueGreen: 
      activeService: rollout-bluegreen-active
      previewService: rollout-bluegreen-preview
      autoPromotionEnabled: true
      # prePromotionAnalysis:     #### Pre-Promotion Analysis
      #   templates:
      #     - templateName: success-rate-pre
      postPromotionAnalysis:    #### Post-Promotion Analysis
        templates:
        - templateName: success-rate-post
        args:
          - name: service-namespace # in post-promotion-analysis.yml we have service-namespace argument with no value. Because it has no value we specify it here.
            value: default
      # abortScaleDownDelaySeconds: 10
      # scaleDownDelaySeconds: 60
      # previewReplicaCount: 2
      # autoPromotionSeconds: 70
---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-active
spec:
  selector:
    app: blue-green-deployment
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000

---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-preview
spec:
  selector:
    app: blue-green-deployment
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
