14-argocd-rollouts/blue-green-analysis/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: blue-green.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rollout-bluegreen-active
            port:
              number: 5000
